<resources>
    <string name="app_name">Tailwind</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection_try_again">No Internet Connection Try Again!</string>
    <string name="try_again">Try Again</string>
    <string name="title">Title</string>
    <string name="content_count">Content Count</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="documentation">Documentation</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="docs">Docs</string>
    <string name="added_to_bookmark">Added to Bookmark</string>
    <string name="delete">Delete</string>
    <string name="bookmark_deleted">Bookmark Deleted</string>
    <string name="connect_with_us">Connect with US</string>
    <string name="version">Version 1.0</string>
    <string name="about_page_description">
        Tailwind CSS Cheat App developed to help you have access to all resources offline,
        bookmark important contents and view more detail of each section through the documentation
        website of tailwind inside application.
    </string>

</resources>