<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.golbarg.tailwind.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_content"
            app:destination="@id/navigation_content" />
    </fragment>

    <fragment
        android:id="@+id/navigation_content"
        android:name="net.golbarg.tailwind.ui.home.content.ContentFragment"
        android:label="Content"
        tools:layout="@layout/fragment_content" >
        <action
            android:id="@+id/action_navigation_content_to_navigation_content_detail"
            app:destination="@id/navigation_content_detail" />
        <action
            android:id="@+id/action_navigation_content_to_navigation_home3"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_content_detail"
        android:name="net.golbarg.tailwind.ui.home.detail.DetailFragment"
        android:label="ContentDetail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_navigation_content_detail_to_navigation_content3"
            app:destination="@id/navigation_content" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="net.golbarg.tailwind.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="net.golbarg.tailwind.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>