<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative_layout_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:text="@string/title" />
        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:fontFamily="@font/inconsolata"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/description" />
    </RelativeLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabInlineLabel="true"
        app:tabSelectedTextColor="?attr/textColor"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout_header">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:icon="@drawable/ic_detail"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_documentation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_search"
            android:text="@string/docs" />
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_details" />
</androidx.constraintlayout.widget.ConstraintLayout>